<resources>
    <string name="app_name">Roth Touchline</string>

    <string name="intro_video"><u>Intro video</u></string>
    <string name="request_password"><u>Request new password</u></string>

    <string name="title_activity_start">Roth Touchline</string>
    <string name="action_settings">Settings</string>

    <string name="login_help">""To connect to the Touchline connection module, the following requirements must be met:
> The connection module must be configured as a master module. If the master LED on the connection module is not lit, hold down the master button on the connection module for about 10 seconds until the master LED stops blinking. For more information, see the Touchline operating instructions on our homepage (http://www.roth-werke insert link)
 > Your mobile phone must be on the same WLAN as the connection module that you want to connect to.""</string>
    <string name="title_activity_search">Search...</string>
    <string name="title_activity_registe_controller">Connection module found</string>
    <string name="title_activity_help">Help</string>


    <string name="help_thermostat">"You can assign a name to each thermostat, according to their position, for example.
> The first time you log in to a thermostat, a number that was assigned automatically by the connection module will appear. If you select this number, you can change the name.
> You can set the temperature using the up/down arrow keys at 0.5-degree intervals.
> You can also select one of the pre-set programs by simply pressing the relevant button. The timer program can only be altered in the Touchline thermostat, not via the app.
Once you press “OK”, the app sends a command to the connection module."</string>


      <string name="help_user">"The mobile no./user ID is a code that the portal server uses to identify each connection module.  If you change the user ID it will be also changed on the portal server, which means that all connection modules with the same user ID and password will be updated at the same time. Please note that any changes will mean that other users will only be able to access the connection modules again when they also change the user ID when they next log in.
If the user ID has been changed, other users will see a warning triangle next to the connection modules that they previously had access to. If they try to log in, they will be asked to enter the new user ID and password.                                                     If there are several connection modules with the same user ID and password, a list will appear in which you can choose which connection modules you would like to have access to. Press “OK” to confirm.
"</string>


    <string name="help_triangle">"The warning triangle indicates that there are problems with a connection module or thermostat.
> If one or more thermostats are not connecting, please check the batteries in the thermostats which are showing a communication error in the display. For more information, see the Touchline operating instructions on our homepage (http://www.roth-werke insert link).
> Check whether the connection module’s password or user ID has been changed.
> If the thermostat continually loses connection, it may be advisable to put the thermostat in a different place to get a better signal."</string>


      <string name="help_password">"Forgotten password:
>If you have forgotten your password you can have it sent to the e-mail address used to register in the app.  For security reasons, you must enter your name and user ID to receive your password. If you did not enter a name or e-mail address when you logged in for the first time, it will not be possible to send you a new password and you must re-register in the connection module by sending an e-mail to "Touchline_PW_reset@Roth-industries.com” and stating the connection module\'s UID number.  To find the UID you must be on the same WLAN as the connection module and log in as a new user. Complete the registration form by entering your name, e-mail address and telephone number/user ID and press “OK”. Select the connection module. The UID number will then appear on the next screen as shaded text/a shaded number. (Example: 51FF6C064965525743540181).                                                                                                                                                                                                             \n Change password:
> After successfully registering the connection module by entering your name, e-mail address and mobile no./user ID, you will be able to change the password. You must request a reset code, with which you can reset your old password for the portal server to the default password.

New reset code:
> When you ask for a reset code, the app will automatically send a request to the portal server, which will generate a code that will be sent to the user\'s e-mail address. The code must then be entered manually.
When you have received and entered the reset code, you can create a new password. The default password is always 1234.
If the connection module is used by several users, they will all need to update the password when they next log in by clicking on the warning triangle and entering the new user ID and password.
"</string>


    <string name="help_controller">"To make your new App more userfriendly, we recommend that you fill in the "Name", "Email" and "User ID". This is used in if you switch phone or if more people needs access to the same controlunit.
> Naming the controlunit is only to facilitate the overview, especially if you have multiple facilities / installations on your App. However, you can not use the same name for more controlunits. The naming could, for example be - "home", "cottage" ... ..
> The graphical report shows the number of controlunits that are connected to the App, it is not possible to make any changes from this screen."</string>


    <string name="help_app">"If you have trouble making contact with your Touchline controlunit it may be because of the following:
> Your controlunit must be set to "Master". The LED on the control unit must light in "Master", if not press and hold the "Master" button on the control unit for approximately 10 seconds until the LED stops flashing. For more information see the guide for Touchline on our website (link to your own touchline guidance)
> You are not on the same WLAN as the Controlunit you wish to connect to."</string>


    <array name="help_menu_items">
        <item>System settings</item>
        <item>Choice of operating mode</item>
        <item>Change connection module name</item>
        <item>Edit list of connection modules</item>
        <item>System info</item>
        <item>App settings</item>
        <item>Change user ID</item>
        <item>Change password</item>
        <item>User setup</item>
        <item>Thermostat settings</item>
        <item>Change Thermostat name</item>
        <item>Thermostat overview</item>
        <item>Help</item>
        <item>Password</item>
        <item>Connection module</item>
        <item>App</item>
        <item>User ID</item>
        <item>Thermostat</item>
    </array>
    <string name="title_activity_controller_operating_modes"></string>
    <string name="title_activity_name_controller">Name of the connection module</string>
    <string name="title_activity_change_user_id">Change user ID</string>
    <string name="title_activity_user_setup">User setup</string>
    <string name="title_activity_change_thermostat_name">Change thermostat name</string>
    <string name="title_activity_thermostat_overview">Thermostat overview</string>
    <string name="title_activity_thermostat_overview_advanced"></string>

    <string name="title_activity_controller_info">System info</string>
    <string name="title_activity_user_login">User login</string>
    <string name="title_activity_change_password">Change password</string>
    <string name="title_activity_no_wlan">No WLAN</string>
    <string name="title_activity_no_internet">No Internet</string>
    <string name="title_activity_non_existing_user_id">Connection module</string>
    <string name="title_activity_controller_already_registred">Connection module</string>
    <string name="title_activity_password_sent_email"></string>
    <string name="title_activity_reset_sent_email">" "</string>
    <string name="title_activity_enter_reset_code">" "</string>
    <string name="title_activity_change_default_password">" "</string>
    <string name="title_activity_wrong_pass">""</string>
    <string name="touchline">Touchline</string>
    <string name="name">Name:</string>
    <string name="error">Possible causes of error messages.</string>
    <string name="ok">OK</string>
    <string name="send_reset_code">Send reset code</string>
    <string name="help_thermostats">Thermostat help menu</string>
    <string name="help_triangle_top">Connection problems help</string>
    <string name="help_ID">User ID help</string>
    <string name="usid">User ID</string>
    <string name="email">E-mail:</string>
    <string name="extra1">The reset code sent via e-mail must be entered in the above field. Please note that all letters must be capitalised.</string>
    <string name="help_app_top">App help</string>
    <string name="help_control">Connection module help</string>
    <string name="help_pass">Help Screen password</string>
    <string name="new_user">New user</string>
    <string name="name_unit">Name\nconnection module</string>
    <string name="controller_registred">The connection module is already registered</string>
    <string name="no_inet">No Internet connection</string>
    <string name="no_wlan">No WLAN connection \n\n\n Connect to a WLAN before making a new registration</string>
    <string name="no_uid">User ID does not exist</string>
    <string name="reset_email">The reset code will be sent to your e-mail.</string>
    <string name="incorrect_pass">Incorrect password</string>
    <string name="existing_uid">Existing user</string>
    <string name="pass_sent_email">The password will be sent to your e-mail.</string>
    <string name="old_uid">Old user\nID</string>
    <string name="name_controller">Name of the\n connection module</string>
    <string name="lang">Language</string>
    <string name="mobile_no">Mobile no./User ID</string>
    <string name="default_pass">Default\npassword</string>
    <string name="enter_reset">Enter\nreset code</string>
    <string name="pass">Password</string>
    <string name="back">Back</string>
    <string name="change_mode">Choice of operating mode</string>
    <string name="old_pass">Old\nPassword</string>
    <string name="help_text">Help text</string>
    <string name="save_pass">Save password</string>
    <string name="default_pass_enter">Please enter default password: 1234</string>
    <string name="new_uid">New user\nID</string>
    <string name="confirm_pass">Confirm\npassword</string>
    <string name="new_pass">New\npassword</string>
    <string name="remember_pass">Remember password</string>
    <string name="ready_connect">" - Ready to connect"</string>
    <string name="loading">Loading. Please wait...</string>

    <string name="roomname">Room\nName:</string>
    <string name="login">Log in</string>
    <string name="edit_controller_list">Edit list of connection modules</string>

    <string name="user_id_registred">User ID already registred</string>
    <string name="forgot_password">Forgotten Password</string>
</resources>
