<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".IntroActivity"
    android:background="#fff">

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/touchline"
        android:id="@+id/Touchline"
        android:textSize="35sp"
        android:textColor="#000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignBottom="@+id/Touchline"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/roth"
        android:layout_toEndOf="@+id/Touchline"
        android:scaleType="fitCenter"
        android:layout_toRightOf="@+id/Touchline" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/spinner"
        android:background="@drawable/bg_picker"
        android:gravity="center_horizontal|top"
        android:layout_above="@+id/linlay"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <Button

            android:text="@string/new_user"
            android:id="@+id/button"
            android:layout_above="@+id/button3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAllCaps="false"
            android:background="@drawable/red_button_custom"
            android:textColor="#fff"
            android:onClick="newUserPressed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginRight="20dp" />

        <Button

            android:id="@+id/button2"
            android:textAllCaps="false"
            android:background="@drawable/red_button_custom"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/existing_uid"
            android:textColor="#fff"
            android:onClick="existingUserPressed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/intro_video"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        android:background="#00ffffff"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical|left"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_above="@+id/spinner"
        android:src="@mipmap/controllers"
        android:padding="10dp" />

</RelativeLayout>
