
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

<ScrollView android:layout_width="match_parent"
    android:isScrollContainer="false"
    android:layout_height="match_parent" tools:context="com.roth.touchline.NewUserFragment"
    android:layout_above="@+id/button6">


    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:context="com.roth.touchline.NewUserFragment"
        android:layout_above="@+id/linearLayout">
    <TextView
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/name"
        android:id="@+id/textView4"
        android:textColor="#000"
        android:textSize="20dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:background="@drawable/text_field_custom"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignTop="@+id/textView4" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/email"
        android:id="@+id/textView5"
        android:textColor="#000"
        android:textSize="20dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:background="@drawable/text_field_custom"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignBottom="@+id/textView5"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/mobile_no"
        android:id="@+id/textView6"
        android:textColor="#000"
        android:textSize="20dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:background="@drawable/text_field_custom"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_alignRight="@+id/editText4"
        android:layout_alignEnd="@+id/editText4"
        android:layout_alignBottom="@+id/textView6"
        android:inputType="phone" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:text="@string/lang"
        android:id="@+id/textView7"
        android:textColor="#000"
        android:textSize="20dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/spinner2"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"
        android:background="@drawable/text_field_custom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_help"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/spinner2"
        android:layout_alignEnd="@+id/spinner2"
        android:textColor="#000" />



</RelativeLayout>

</ScrollView>

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/ok"
        android:id="@+id/button6"
        android:background="@drawable/red_button_custom"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:onClick="okNewUserPressed"

        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="70dp"
android:layout_alignParentBottom="true"
android:layout_centerHorizontal="true"
android:background="#fff"
android:id="@+id/linearLayout">

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/imageButton"
    android:src="@mipmap/nobutton"
    android:scaleType="fitCenter"
    android:background="#fff"
    android:layout_weight=".3"
    android:padding="5dp" />

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/imageButton1"
    android:src="@mipmap/nobutton"
    android:scaleType="fitCenter"
    android:background="#fff"
    android:layout_weight=".3"
    android:padding="5dp" />

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/imageButton2"
    android:src="@mipmap/info"
    android:scaleType="fitCenter"
    android:background="?android:attr/selectableItemBackground"
    android:layout_weight=".3"
    android:padding="5dp"
    android:onClick="openAppHelp" />


</LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:background="#CBC9C9"
        android:id="@+id/linearLayout2"></LinearLayout>

</RelativeLayout>
