
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_above="@+id/linearLayout">

        <RelativeLayout  android:layout_width="match_parent"
            android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.roth.touchline.HelpActivity">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:id="@+id/textView12"
                android:textSize="16dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button_custom"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView12"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
               >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_pass"
                    android:id="@+id/textView13"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_password"
                    android:id="@+id/textView14"
                    android:textColor="#fff"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:background="#fff"
    android:id="@+id/linearLayout">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageButton"
        android:src="@mipmap/home"
        android:scaleType="fitCenter"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="onHomePressed"
        android:layout_weight=".3"
        android:padding="5dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageButton1"
        android:src="@mipmap/nobutton"
        android:scaleType="fitCenter"
        android:background="#fff"
        android:layout_weight=".3"
        android:padding="5dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageButton2"
        android:src="@mipmap/nobutton"
        android:scaleType="fitCenter"
        android:background="#fff"
        android:layout_weight=".3"
        android:padding="5dp" />


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:background="#CBC9C9"
        android:id="@+id/linearLayout2"></LinearLayout>


</RelativeLayout>
